; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_sake.c_eap_sake_deinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_sake.c_eap_sake_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_sake_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.eap_sm*, i8*)* @eap_sake_deinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eap_sake_deinit(%struct.eap_sm* %0, i8* %1) #0 {
  %3 = alloca %struct.eap_sm*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.eap_sake_data*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.eap_sake_data*
  store %struct.eap_sake_data* %7, %struct.eap_sake_data** %5, align 8
  %8 = load %struct.eap_sake_data*, %struct.eap_sake_data** %5, align 8
  %9 = getelementptr inbounds %struct.eap_sake_data, %struct.eap_sake_data* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @os_free(i32 %10)
  %12 = load %struct.eap_sake_data*, %struct.eap_sake_data** %5, align 8
  %13 = getelementptr inbounds %struct.eap_sake_data, %struct.eap_sake_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @os_free(i32 %14)
  %16 = load %struct.eap_sake_data*, %struct.eap_sake_data** %5, align 8
  %17 = call i32 @bin_clear_free(%struct.eap_sake_data* %16, i32 8)
  ret void
}

declare dso_local i32 @os_free(i32) #1

declare dso_local i32 @bin_clear_free(%struct.eap_sake_data*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
